new translation, 2% left

--- a/locale/pt_BR.UTF-8/LC_MESSAGES/FixMyStreet.po
+++ b/locale/pt_BR.UTF-8/LC_MESSAGES/FixMyStreet.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: 1.0\n"
 "Report-Msgid-Bugs-To: matthew@mysociety.org\n"
 "POT-Creation-Date: 2020-05-06 13:37+0100\n"
-"PO-Revision-Date: 2020-08-25 00:11-0300\n"
+"PO-Revision-Date: 2020-08-25 00:16-0300\n"
 "Last-Translator: Kennet Calixto <kennet.emerson@gmail.com>\n"
 "Language-Team: English <kde-i18n-doc@kde.org>\n"
 "Language: pt_BR\n"
@@ -4816,6 +4816,8 @@ msgid ""
 "This is a <strong>private</strong> name for this template so you can identify"
 " it when updating reports or editing in the admin."
 msgstr ""
+"Este é um nome <strong>privado</strong> para este modelo, assim você poderá"
+" identificá-lo ao atualizar denúncias ou editar, dentro da administração."
 
 #: templates/web/base/admin/templates/edit.html:31
 msgid ""
